# soltydotbet-program

./: .gitignore
backend/: server.ts
betting-dapp/: .gitignore
betting-dapp/program/: Cargo.toml
betting-dapp/program/src/: accounts.rs  betting.rs  entrypoint.rs  errors.rs  init.rs  lib.rs  match.rs  matchs.rs  oracle.rs  payouts.rs  program.rs  states.rs
perp-git/: client.ts
perp-git/programs/error/: Cargo.toml
perp-git/tests/anchor/: basic.ts
src/: lib.rs  processor.rs
src/soltybet/: lib.rs
src/wager/: entrypoint.rs  instruction.rs  lib.rs  state.rs
wager/src/assets/: info.txt
wager/src/client-site/: Home.js
